# oxide_mongo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: fonts.rs  i18n.rs  logging.rs  main.rs  settings.rs
src/i18n/: chinese_simplified.rs  chinese_traditional.rs  french.rs  german.rs  italian.rs  mod.rs  portuguese.rs  russian.rs  spanish.rs
src/i18n/docs/: chinese_simplified.rs  chinese_traditional.rs  english.rs  french.rs  german.rs  italian.rs  mod.rs  portuguese.rs  russian.rs  spanish.rs
src/mongo/: bson_edit.rs  bson_tree.rs  connection.rs  mod.rs  query.rs  shell.rs  shell_preprocessor.rs  ssh_tunnel.rs  tests.rs  tests_scenario.txt
src/ui/: about.rs  connections.rs  fonts_dropdown.rs  help_docs.rs  menues.rs  mod.rs  modal.rs  settings.rs
