[package]
name = "oxide_mongo"
version = "0.1.7"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["image"] }
serde_json = "1.0"
iced_aw = { version = "0.13", features = ["tabs", "menu", "tab_bar", "context_menu"] }
iced_fonts = "0.2.1"
rand = "0.9.2"
mongodb = { version = "3", default-features = false, features = ["sync", "bson-2", "compat-3-3-0", "rustls-tls"] }
tokio = { version = "1.37", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["std"] }
base64 = "0.22"
fontdb = "0.15"
ssh2 = "0.9"
rfd = "0.17.1"
webbrowser = "0.8"
log = "0.4"

[dev-dependencies]
iced_runtime = "0.14"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
